bug fix dark mode flickering

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,10 +7,6 @@
 @layer base {
 	html {
 		font-family: 'Roboto', sans-serif;
-
-		&.dark {
-			@apply text-slate-100;
-		}
 	}
 
 	.custom-bg {
